<resources>
    <string name="app_name">First Application</string>
    <string name="main_text">Welcome to Yogesh Knowledge Hub</string>
    <string name="go_button">Let\'s Go</string>
    <string name="appdev">Android App Development</string>
    <string name="webdev">Web Development</string>
    <string name="ios_app_develeopment">Ios App Develeopment</string>
    <string name="call_us">Call Us</string>
    <string name="software_development">Software Development</string>
    <string name="devops">DevOps</string>
    <string name="machine_learning">Machine Learning</string>
</resources>